wording and social icons

--- a/todo
+++ b/todo
@@ -4,14 +4,7 @@ Gallery Images
 
 Team Images
 
-Social Links?
+Social Links? for pulse
 
 Contact
   Ph number
-  Email
-
-TFL Domain
-  cname
-  email
-
-TKD Logo in hero image
